gider ikke mere

--- a/01-areal.html
+++ b/01-areal.html
@@ -12,7 +12,9 @@
         let length = 20;
         let width = 5;
         let area = length * width;
+        let resultat = `Længden er ${length} og bredden er ${width}. Arealet er ${area}`;
 
+        console.log(resultat);
     </script>
 </body>
 
