--- a/quiz.html
+++ b/quiz.html
@@ -11,74 +11,25 @@
 
     <script>
         let points = 0;
-        14
-        15
-        const q1 = prompt("Hvad hedder jeg?");
-        16
-        17
-        if (q1 == "karoline") {
-            18
-            points++;
-            19
-            20
-            alert("POINT: " + points);
-            21
+
+        function ask(spørgsmål, rigtigtSvar) {
+            let svar = prompt(spørgsmål);
+            if (svar == rigtigtSvar) {
+                points++;
+                alert("Bravo! Du får et point for det svar!");
+            } else {
+                points--;
+                alert("Buuu! Du får et minuspoint for det svar.");
+            }
         }
-        22
-        23
-        const q2 = prompt("Hvad er mit ynglingsdyr?");
-        24
-        25
-        if (q2 == "flodhest") {
-            26
-            points++;
-            27
-            28
-            alert("POINT: " + points);
-            29
-        }
-        30
-        31
-        const q3 = prompt("Hvad er min ynglingsfarve?");
-        32
-        33
-        if (q3 == "gul") {
-            34
-            points++;
-            35
-            36
-            alert("POINT: " + points);
-            37
-        }
-        38
-        39
-        const q4 = prompt("Hvad er min ynglingsret?");
-        40
-        41
-        if (q4 == "pizza") {
-            42
-            points++;
-            43
-            44
-            alert("POINT: " + points);
-            45
-        }
-        46
-        47
-        const q5 = prompt("Hvad er min ynglingsaktivitet?");
-        48
-        49
-        if (q5 == "spise") {
-            50
-            points++;
-            51
-            52
-            alert("POINT: " + points);
-            53
-        }
-        54
-        55
-        alert(`TILLYKKE du fik ${points} point`);
+        ask("Hvor mange år har Louise arbejdet på KEA?", 2);
+        ask("Hvor mange semestre er der på MMD?", 4);
+        ask("Hvad hedder vores uddannelsesleder til fornavn?", "Frederikke");
+        ask("Hvad hedder Klaus til efternavn?", "Mandal");
+        ask("Hvad er Klaus' skonummer?", 45);
+        ask("Hvad hedder Helles kat", "Bast");
+        alert(`du fik ${points} points.`);
+
     </script>
 
 </body>
