babushka popup done

--- a/babushka/babushka-nyside.html
+++ b/babushka/babushka-nyside.html
@@ -17,6 +17,8 @@
         <button class="filter" data-hold="forretter">Foretter</button>
         <button class="filter" data-hold="hovedretter">Hovedretter</button>
         <button class="filter" data-hold="desserter">Desserter</button>
+        <button class="filter" data-hold="drikkevarer">Drikkevarer</button>
+        <button class="filter" data-hold="sideorders">Sideordrer</button>
     </div>
 
     <div id="liste">
@@ -77,7 +79,6 @@
         .valgt {
             background-color: blueviolet;
         }
-
     </style>
 
     <script>
@@ -137,7 +138,6 @@
 
 
         }
-
     </script>
 </body>
 
