--- a/babushka/singleview.html
+++ b/babushka/singleview.html
@@ -71,7 +71,6 @@
     #tilbage button:hover {
         color: black;
     }
-
 </style>
 
 
@@ -109,7 +108,7 @@
 
 
                         <p>${ret.lang}</p>
-                        <p>${ret.pris},-</p>
+                        <p>Pris: ${ret.pris},-</p>
                     </article>
                     `;
             }
@@ -118,7 +117,6 @@
             })
             getJson();
         }
-
     </script>
     <footer></footer>
 </body>
