--- a/restaurant/historie.html
+++ b/restaurant/historie.html
@@ -15,8 +15,27 @@
             <a href="historie.html">Historie</a></div>
         <div id="logo"></div>
         <div id="right"><a href="reserver.html">Reservation</a>
-            <a href="lokation.html">Lokationer</a></div>
+            <a href="lokation.html">Lokation</a></div>
     </nav>
+
+
+    <div id="burger">
+        <div id="lillelogo"></div>
+        <div class="dropdown">
+            <button class="dropbtn">
+                <div></div>
+                <div></div>
+                <div></div>
+            </button>
+            <div id="myDropdown" class="dropdown-content">
+                <a href="index.html">Hjem</a>
+                <a href="menu.html">Menu</a>
+                <a href="historie.html">Historie</a>
+                <a href="reserver.html">Reservation</a>
+                <a href="lokation.html">Lokation</a>
+            </div>
+        </div>
+    </div>
 
     <div id="content">
         <div id="address">
@@ -38,8 +57,6 @@
 
         <div id="text">
 
-
-
             <ul>
                 <li><a href="menu.html">Menu</a></li>
                 <li><a href="historie.html">Historie</a></li>
@@ -54,4 +71,5 @@
 
 
 </body>
+<script src="burger.js"></script>
 </html>
