--- a/restaurant/lokation.html
+++ b/restaurant/lokation.html
@@ -15,11 +15,30 @@
             <a href="historie.html">Historie</a></div>
         <div id="logo"></div>
         <div id="right"><a href="reserver.html">Reservation</a>
-            <a href="lokation.html">Lokationer</a></div>
+            <a href="lokation.html">Lokation</a></div>
     </nav>
 
+
+    <div id="burger">
+        <div id="lillelogo"></div>
+        <div class="dropdown">
+            <button class="dropbtn">
+                <div></div>
+                <div></div>
+                <div></div>
+            </button>
+            <div id="myDropdown" class="dropdown-content">
+                <a href="index.html">Hjem</a>
+                <a href="menu.html">Menu</a>
+                <a href="historie.html">Historie</a>
+                <a href="reserver.html">Reservation</a>
+                <a href="lokation.html">Lokation</a>
+            </div>
+        </div>
+    </div>
+
     <div id="content">
-        <div id="kort"></div>
+        <iframe src="https://snazzymaps.com/embed/134807" width="70%" height="300px" style="border:none;"></iframe>
 
         <div id="text">
             <h2>Lyngby Hovedgade 84, <br>2800 Kgs. Lyngby</h2>
@@ -41,4 +60,5 @@
 
 
 </body>
+<script src="burger.js"></script>
 </html>
