--- a/restaurant/menu.html
+++ b/restaurant/menu.html
@@ -6,6 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="style.css">
+
+        <link rel="apple-touch-icon" sizes="57x57" href="billeder/1x/Artboard%201-100.jpg">
+    <link rel="apple-touch-icon" sizes="60x60" href="billeder/1x/Artboard%201-100.jpg">
+    <link rel="apple-touch-icon" sizes="72x72" href="billeder/1x/Artboard%201-100.jpg">
+    <link rel="apple-touch-icon" sizes="76x76" href="billeder/1x/Artboard%201-100.jpg">
+    <link rel="apple-touch-icon" sizes="114x114" href="billeder/1x/Artboard%201-100.jpg">
+    <link rel="apple-touch-icon" sizes="120x120" href="billeder/1x/Artboard%201-100.jpg">
+    <link rel="apple-touch-icon" sizes="144x144" href="billeder/1x/Artboard%201-100.jpg">
+    <link rel="apple-touch-icon" sizes="152x152" href="billeder/1x/Artboard%201-100.jpg">
+    <link rel="apple-touch-icon" sizes="180x180" href="billeder/1x/Artboard%201-100.jpg">
+    <link rel="icon" type="image/png" sizes="192x192" href="billeder/1x/Artboard%201-100.jpg">
+    <link rel="icon" type="image/png" sizes="32x32" href="billeder/1x/Artboard%201-100.jpg">
+    <link rel="icon" type="image/png" sizes="96x96" href="billeder/1x/Artboard%201-100.jpg">
+    <link rel="icon" type="image/png" sizes="16x16" href="billeder/1x/Artboard%201-100.jpg">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -14,7 +32,7 @@
         <div id="left"><a href="index.html">Hjem</a>
             <a href="menu.html">Menu</a>
             <a href="historie.html">Historie</a></div>
-        <div id="logo"></div>
+        <a href="index.html"><div id="logo"></div></a>
         <div id="right"><a href="reserver.html">Reservation</a>
             <a href="lokation.html">Lokation</a></div>
     </nav>
